# strip_markdown

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yaml
strip_markdown/: __init__.py  __main__.py  strip_markdown.py
