[metadata]
name = strip_markdown
version = v1.0
author = Derek Henderson
author_email = derekhenderson818@gmail.com
description = Converts markdown to plain text
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/D3r3k23/strip_markdown
project_urls =
    Issues = https://github.com/D3r3k23/strip_markdown/issues
license = MIT License
platform = OS Independent
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = markdown, md

[options]
# package_dir =
#     = strip_markdown
packages = strip_markdown
python_requires = >=3.10
install_requires =
    markdown
    beautifulsoup4
